just added a link?

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a Drupal 7 HTML5 subtheme that I created for Dudenhofer.com
+This is a Drupal 7 HTML5 subtheme that I created for http://dudenhofer.com
 
 The base theme is Adaptive Theme and can be found here:
 http://drupal.org/project/adaptivetheme
